@@ -22,6 +22,7 @@ Changes in 3.3rc1:
 - Improve editing of feed name
 - Fix crash in ChunkDownload (196417)
 - Remove quit button from MissingFilesDlg (207388)
+- Fix timeout handling of UDPTracker (211191)
 
 Changes in 3.3beta1:
 - Cleanup plugin list (180402)
